--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -15,6 +15,9 @@
       <%= f.label :context %>
       <%= f.text_field :context %>
 
+      <%= f.label :categorie %>
+      <%= f.text_field :cat_id%>
+
       <%= f.label :type_of_debate %>
       <%= f.text_field :type_deb%>
 	  
