--- a/app/views/shared/_replique_badge.html.erb
+++ b/app/views/shared/_replique_badge.html.erb
@@ -1,6 +1,6 @@
 <section id="replique">
 		<div class="span1" id="user">
-			<%= replique.user.name %>
+			<%= replique.user.fitting_name %>
 		</div>
 		<div class="span5">
 			<%= replique.content %>
