--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -163,25 +163,31 @@ input.ajust-input, textarea.ajust-input {
 		}
 		
 		.texte{
-		width:360px;
+		width:350px;
 		margin-top:8px;
 		margin-left:-20px;
 		
 	   	 .title{
-		 width: 340px;
-		 margin:-100px 0px 3px 10px;
+		 width: 300px;
+		 margin-top:-100px;
+		margin-bottom:3px;
+		margin-left:20px;
 	   	 text-align: center;
 	   	 font-family:"gotham";
 	   	 font-size:18px;
 	   	 color:black;
+			.title:hover{
+				text-decoration: underline;
+			}	
 	   	 }
 	   	 .context{
-	   	 padding-right:40px;
-	   	 text-align:center;
-	   	 padding-left:15px;
-	   	 font-family:"georgia";
-	   	 font-size:13px;
-	   	 font-style : italic;
+			width: 310px;
+			margin-left: 20px;
+	   	 	text-align:left;
+	   	 	font-family:"georgia";
+			font-style: italic;
+	   	 	font-size:14px;
+	   	 	font-style : italic;
 	   	 }
 		}
 	}
@@ -232,20 +238,16 @@ input.ajust-input, textarea.ajust-input {
 		
 	   	 .title{
 		 width: 340px;
-		 margin:-100px 0px 3px 10px;
+		 margin:-85px 0px 3px 10px;
 	   	 text-align: center;
 	   	 font-family:"gotham";
 	   	 font-size:18px;
 	   	 color:black;
+			.title:hover{
+				text-decoration: underline;
+			}
 	   	 }
-	   	 .context{
-	   	 padding-right:40px;
-	   	 text-align:center;
-	   	 padding-left:15px;
-	   	 font-family:"georgia";
-	   	 font-size:13px;
-	   	 font-style : italic;
-	   	 }
+
 		}
 	}
 		.follow{
@@ -276,10 +278,11 @@ input.ajust-input, textarea.ajust-input {
 }
 
 #doulin-badge{
-		
+	width: 570px;
+	float:left;
+	
 	#image-gauche{
 		border:1px solid #000000;
-		float:left;
 		width:110px;
 		height:128px;
 		img { width: 110px; height:128px;}
@@ -296,25 +299,43 @@ input.ajust-input, textarea.ajust-input {
 			margin: 10px 10px 10px 10px; 
 			color:white;
 			font-family:"gotham";
-			font-size:16px;
+			font-size:18px;
 			text-align:center;
+			
+			.title:hover{
+				text-decoration: underline;
+			}
 			}
 			
 			.nom1{
-			color:$mainColor;
-			font-family:"bebasneue-webfont";
-			font-size:18px;
+				margin-top:20px;
+			color:white;
+			font-family:"georgia";
+			font-size:15px;
 			text-align:left;
 			padding-left: 20px;
+			font-style:italic;
+			
+			.nom1:hover{
+				text-decoration: underline;
+			}
 			}
 			
 			.nom2{
-			color:$mainColor;
-			font-family:"bebasneue-webfont";
-			font-size:18px;
-			text-align:right;
-			padding-right: 20px;
+				color:white;
+				font-family:"georgia";
+				font-size:15px;
+				text-align:right;
+				padding-right: 20px;
+				font-style:italic;
+				margin-top:-8px;
+				margin-bottom: 8px;
+				
+				.nom2:hover{
+					text-decoration: underline;
+				}
 			}
+			
 	}
 	
 	#image-droite{
