--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -74,6 +74,7 @@ margin-top:23px;
 		}
 		
 		.fields{
+		font-family: "gotham";
 		margin-top: 15px;
 		background-color: #FFF;
 		height:40px;
@@ -83,9 +84,10 @@ margin-top:23px;
 		}
 		
 		.fields2{
+		font-family: "gotham";
 		margin-top: 15px;
 		background-color: #FFF;
-		width: 160px;
+		width: 140px;
 		height:40px;		
 		border: none;
 		border-radius: 0px;
@@ -93,15 +95,15 @@ margin-top:23px;
 		
 		.validation{
 		margin-top: -69px;
-		margin-left: 185px;
+		margin-left: 170px;
 		background-color: #000;
-		width: 75px;
+		width: 90px;
 		height:40px;		
 		border: none;
 		color: white;
 		text-align: center;
 		font-family:"gotham";
-		font-size: 14px;
+		font-size: 16px;
 		border-radius: 0px;		
 		}
 		
@@ -266,11 +268,29 @@ margin-top:23px;
 
 #for-badges{
 	margin-left: 435px;
-	margin-top: -490px;
+	margin-top: -498px;
 	
 	.liste{
 	margin-left:10px;
 	margin-bottom:10px;
 	}	
+	
+	.espace{
+		height: 41px;
+		width: 20px;
+		background-color: white;
+	}
+	.espace1{
+		height: 74px;
+		width: 20px;
+		background-color: white;
+	}
+	
+	.espace2{
+			margin-top:-25px;
+			height: 0px;
+			width: 20px;
+			background-color: white;
+	}			
 }
 
