--- a/app/views/public_activity/challenge/_vote.html.erb
+++ b/app/views/public_activity/challenge/_vote.html.erb
@@ -1,7 +1,7 @@
 <section id="activities">
 	<% if activity.trackable %>
 	  	<div class="span4" id="intro-activities">
-		<div class="texte"><%= link_to activity.owner.fitting_name, activity.owner %>s'intéresse au défi</div></div>
+		<div class="texte"><%= link_to activity.owner.fitting_name, activity.owner %> a voté pour le débat </div></div>
 		<div class="row"><%= render "shared/challenge_badge", challenge: activity.trackable %></div>
 	<% end %>
 </section>
