--- a/app/views/public_activity/doulin/_vote.html.erb
+++ b/app/views/public_activity/doulin/_vote.html.erb
@@ -1,7 +1,7 @@
-voted
-
-<% if activity.trackable %>
-  <%= link_to activity.trackable.title, activity.trackable %>
-<% else %>
-  which has since been removed
-<% end %>
+<section id="activities">
+	<% if activity.trackable %>
+	  	<div class="span4" id="intro-activities">
+		<div class="texte"><%= link_to activity.owner.fitting_name, activity.owner %> a voté pour l'expert</div></div>
+		<div class="row"><%= render "shared/doulin_badge", doulin: activity.trackable %></div>
+	<% end %>
+</section>
