--- a/app/views/shared/_argument_badge.html.erb
+++ b/app/views/shared/_argument_badge.html.erb
@@ -7,14 +7,15 @@
 							<%= image_tag argument.user.avatar.url(:medium), class: "image" %>
 						</div>
 						<div class="nom-user">
-	                 		<%= link_to argument.user.name, argument.user %>
+	                 	<%= link_to argument.user.fitting_name, argument.user %>
 	                 	</div>
 	                 </div>
 	                 <div class="span4">
 						<div class="row" id='title5'>
 	                 		<div class="title">
 	                 			<h2><%= argument.title%></h2>
-							<span class="cont"><%=argument.content.split(' ').slice(0,36).join(' ')%> ...</span>
+							</div>
+							<div class="cont"><%=argument.content.split(' ').slice(0,36).join(' ')%> ...
 	                 		</div>
 						</div>
 						<div class="row" id="coco1">
@@ -28,7 +29,7 @@
 							  <%= image_tag("box-texte.png", class: "box")%>
 							  <%= image_tag("vote-oui.png", class: "oui")%>	
 									
-							  <a class='toggleOpen'>Lire la suite... </a>								
+							  <div class='toggleOpen'>Lire la suite...</div>								
 	                 		</div>
 						</div>
 						
@@ -52,12 +53,11 @@
 		    		<% argument.argcoms.each do |argcom| %>
     	    		 <%= render "shared/argcom_badge", :argcom => argcom %>
     	    		<% end %>
+					<% if signed_in? && argument.argumentable_type == "Debate"%>
+			    		<%= render "shared/argcom_form", :argcom => argument.argcoms.new, :argument => argument %>
+			    	<%end%>
 		    </div>
 		</div>
-		<div class="row">
-		    <% if signed_in? && argument.argumentable_type == "Debate"%>
-		    	<%= render "shared/argcom_form", :argcom => argument.argcoms.new, :argument => argument %>
-		    <%end%>
-	   </div>
+
 	</div>
 </section>
