--- a/app/views/shared/_argument_form.html.erb
+++ b/app/views/shared/_argument_form.html.erb
@@ -16,7 +16,7 @@
 		
 		<div class='row'>
 			<div class='span4'>
-					<%= f.text_area:title, rows:1, class: "title-newarg", placeholder: "Titre (moins de 140 caractères)" %>
+					<%= f.text_field:title, rows:1, class: "title-newarg", placeholder: "Titre (moins de 140 caractères)" %>
 			</div>
 		</div>
 		<div class='row'>
