--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -83,9 +83,15 @@
 		<%= render "shared/menu_cat"%>
 	
 		<div id="best-debates3">
-    	    <%= render "shared/challenge_badge", :challenge => @challenge%>
-    	    <%= render "shared/debate_badge", :debate => @debate %>
-    	    <%= render "shared/doulin_badge", :doulin => @doulin %>
+			<% if @challenge.any?%>
+    	    	<%= render "shared/challenge_badge", :challenge => @challenge%>
+			<%end%>
+			<% if @debate.any?%>
+    	    	<%= render "shared/debate_badge", :debate => @debate %>
+			<% end%>
+			<% if @doulin.any?%>
+    	    	<%= render "shared/doulin_badge", :doulin => @doulin %>
+			<% end%>
 		</div>
 	</div>
 		
