--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -498,6 +498,7 @@
 	#coco{
 	margin-left: -35px;
 	
+	.toggle{
 	#argcontent{
 	margin-top:20px;
 	text-align: left;
@@ -506,6 +507,9 @@
 	font-size: 1px;
 	border-bottom:2px dashed #000000;
 	}
+	
+	}
+
 	
 	.toggleClose{
 	padding-top:5px;
@@ -616,6 +620,7 @@
 	#coco{
 	margin-left: -35px;
 	
+	.toggle{
 	#argcontent{
 	margin-top:20px;
 	text-align: left;
@@ -623,6 +628,7 @@
 	font-family:"georgia";
 	font-size: 14px;
 	border-bottom:2px dashed #000000;
+	}
 	}
 	
 	.toggleClose{
@@ -735,6 +741,8 @@
 	#coco{
 	margin-left: -35px;
 	
+
+	.toggle{
 	#argcontent{
 	margin-top:20px;
 	text-align: left;
@@ -742,6 +750,7 @@
 	font-family:"georgia";
 	font-size: 14px;
 	border-bottom:2px dashed #000000;
+	}
 	}
 	
 	.toggleClose{
